--- a/throt-all-elites/package.json
+++ b/throt-all-elites/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "framer-motion": "^12.23.24",
     "next": "16.0.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/estree": "^1.0.8",
+    "@types/json-schema": "^7.0.15",
+    "@types/node": "^20.19.27",
     "@types/react": "^19.2.4",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.19",
